create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1717,6 +1717,22 @@ body {
   text-align: left;
   color: #ffffff;
 }
+.cid-qxhhLRowvm {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-qxhhLRowvm .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-qxhhLRowvm .mbr-author-name {
+  font-weight: bold;
+}
+.cid-qxhhLRowvm .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
 .cid-qxhaqvhdbd {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1742,43 +1758,34 @@ body {
   color: #ffffff;
   text-align: center;
 }
-.cid-qxgXYEw6s0 {
+.cid-qxhgNGCMX2 {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-qxgXYEw6s0 .content {
+  .cid-qxhgNGCMX2 .content {
     text-align: center;
   }
-  .cid-qxgXYEw6s0 .content > div:not(:last-child) {
+  .cid-qxhgNGCMX2 .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-@media (max-width: 767px) {
-  .cid-qxgXYEw6s0 .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-qxgXYEw6s0 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-qxgXYEw6s0 .media-wrap img {
-  height: 6rem;
+.cid-qxhgNGCMX2 .map {
+  height: 18.75rem;
 }
 @media (max-width: 767px) {
-  .cid-qxgXYEw6s0 .footer-lower .copyright {
+  .cid-qxhgNGCMX2 .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-qxgXYEw6s0 .footer-lower hr {
+.cid-qxhgNGCMX2 .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-qxgXYEw6s0 .footer-lower .social-list {
+.cid-qxhgNGCMX2 .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1787,29 +1794,51 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-qxgXYEw6s0 .footer-lower .social-list .mbr-iconfont-social {
+.cid-qxhgNGCMX2 .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-qxgXYEw6s0 .footer-lower .social-list .soc-item {
+.cid-qxhgNGCMX2 .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qxgXYEw6s0 .footer-lower .social-list a {
+.cid-qxhgNGCMX2 .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qxgXYEw6s0 .footer-lower .social-list a:hover {
+.cid-qxhgNGCMX2 .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qxgXYEw6s0 .footer-lower .social-list {
+  .cid-qxhgNGCMX2 .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-qxgXYEw6s0 P {
-  text-align: left;
-  color: #55b4d4;
+.cid-qxhgNGCMX2 .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-qxhgNGCMX2 .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-qxhgNGCMX2 .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-qxhgNGCMX2 .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-qxhgNGCMX2 .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
