create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1750,7 +1750,7 @@ body {
 }
 .cid-qCVYLdeSHB .nav-link:hover,
 .cid-qCVYLdeSHB .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #232323 !important;
 }
 .cid-qCW45w4p2T {
   background-image: url("../../../assets/images/-1280x640.jpg");
@@ -2170,7 +2170,7 @@ body {
 }
 .cid-qCVYLdeSHB .nav-link:hover,
 .cid-qCVYLdeSHB .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #232323 !important;
 }
 .cid-qCWDxjIEtE {
   padding-top: 15px;
@@ -2623,7 +2623,7 @@ body {
 }
 .cid-qCWE4etq3R .nav-link:hover,
 .cid-qCWE4etq3R .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #232323 !important;
 }
 .cid-qCWEyykTjE {
   padding-top: 0px;
@@ -3102,7 +3102,7 @@ body {
 }
 .cid-qCWEPVBhaf .nav-link:hover,
 .cid-qCWEPVBhaf .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #232323 !important;
 }
 .cid-qCWEPWjiKe {
   padding-top: 0px;
@@ -3547,7 +3547,7 @@ body {
 }
 .cid-qCWE4etq3R .nav-link:hover,
 .cid-qCWE4etq3R .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #232323 !important;
 }
 .cid-qCWL0GyZNe {
   padding-top: 90px;
